--- a/src/lib/packages/base/src/IconButton/IconButton.sass
+++ b/src/lib/packages/base/src/IconButton/IconButton.sass
@@ -10,7 +10,7 @@
     --clue-icon-button-icon-size-large: 24px
 
     //background color
-    --clue-icon-button-background-color-disabled-primary: #D3CFE8
+    --clue-icon-button-background-color-disabled-primary: var(--clue-color-primary-100)
     
     //background color
     --clue-icon-button-color-disabled-primary: var(--clue-color-primary-300)
