feat: small size in TextFieldBase

--- a/src/lib/packages/forms/src/TextField/TextFieldBase.sass
+++ b/src/lib/packages/forms/src/TextField/TextFieldBase.sass
@@ -1,10 +1,13 @@
 @mixin text-field-base-vars()
 	//height
 	--clue-text-field-base-height: 48px
+	--clue-text-field-base-s-small-height: 32px
 
 	//padding
 	--clue-text-field-base-padding-y: 12px
 	--clue-text-field-base-padding-x: 16px
+	--clue-text-field-base-s-small-padding-y: 10px
+	--clue-text-field-base-s-small-padding-x: 14px
 
 	//border color
 	--clue-text-field-base-border-color: #E8E9ED
@@ -36,9 +39,11 @@
 
 	//border radius
 	--clue-text-field-base-border-radius: var(--clue-size-border-radius-3)
+	--clue-text-field-base-s-small-border-radius: var(--clue-size-border-radius-2)
 
 	//font size
 	--clue-text-field-base-font-size: 16px
+	--clue-text-field-base-s-small-font-size: 14px
 
 	//font weight
 	--clue-text-field-base-font-weight: 400
