--- a/src/lib/packages/styles/src/generators/color.scss
+++ b/src/lib/packages/styles/src/generators/color.scss
@@ -6,7 +6,7 @@
     $colorResult: color.adjust($color, $lightness: math.percentage($percent));
 
     // @debug $lightnessValue, $percent, 46% + math.percentage($percent), $colorResult, color.hue($colorResult), color.saturation($colorResult), color.lightness($colorResult);
-    $colorString: 'hsl(#{math.round(color.hue($colorResult))}, #{math.round(color.saturation($colorResult))}, #{math.round(color.lightness($colorResult))})';
+    $colorString: '#{math.round(color.hue($colorResult))}, #{math.round(color.saturation($colorResult))}, #{math.round(color.lightness($colorResult))}';
     @return $colorString;
 }
 
@@ -15,8 +15,10 @@
     $root: '--clue-color-#{$name}';
     $lightnessList: 10, 50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 950, 990;
     @each $lightnessValue in $lightnessList {
-        $colorString: get-color-by-value($color, $lightnessValue);
+        $hslValue: get-color-by-value($color, $lightnessValue);
+        $colorString: 'hsl(#{$hslValue})';
         // @debug $colorString;
+        #{$root}-#{$lightnessValue}-hsl: #{$hslValue};
         #{$root}-#{$lightnessValue}: #{$colorString};
     }
     #{$root}: #{'var(#{$root}-500)'}
