--- a/src/routes/styles/index.scss
+++ b/src/routes/styles/index.scss
@@ -5,15 +5,7 @@ body {
 	--dot-space: 24px;
 	padding: 0 20px;
 	font-family: var(--clue-font-family);
-	background: linear-gradient(
-				90deg,
-				var(--dot-bg) calc(var(--dot-space) - var(--dot-size)),
-				transparent 1%
-			)
-			center / var(--dot-space) var(--dot-space),
-		linear-gradient(var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center /
-			var(--dot-space) var(--dot-space),
-		var(--dot-color);
+	background: linear-gradient(90deg, var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space), linear-gradient(var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space), var(--dot-color);
 }
 
 hr {
